--- a/aplicativo_pos_hc/aplicativo_pos_hc/templates/registro.html
+++ b/aplicativo_pos_hc/aplicativo_pos_hc/templates/registro.html
@@ -6,7 +6,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha384-NwF3tBdYF4JcJjU4pN3nI9an2P+iK8a/1qdzNm5/lf7dUq0HfdvpBfB5SvOzJ4tv" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/general.css') }}">
-    <title>Página con Menú</title>
+    <title>Registro de Nuevo Usuario</title>
 
 </head>
 <body>
@@ -67,13 +67,12 @@
     <div class="modal-content">
         <span class="close" onclick="closeModal()">×</span>
         <div class="modal-header">
-            <h2>Crear  Cliente</h2>
-           
+            <h2>Registre nuevo usuario</h2>
         </div>
         <div class="modal-body">
                 <div class="caja1">
                     <div class="form-group">
-                        <label for="venta_id">Cliente ID:</label>
+                        <label for="venta_id">Nombre</label>
                         <input type="text" id="cliente_id" name="cliente_id">
                     </div>
                     <div class="form-group">
@@ -90,88 +89,29 @@
                         <input type="text" id="Identificacion" name="Identificacion">
                     </div>
                     <div class="form-group">
-                        <label for="valor_unitario">Nombre:</label>
+                        <label for="valor_unitario">Usuario:</label>
                         <input type="text" id="Nombre" name="Nombre">
                     </div>
                     
                 </div>
                 <div class="caja1">
                     <div class="form-group">
-                        <label for="descuento">Direccion:</label>
+                        <label for="descuento">Contraseña:</label>
                         <input type="text" id="descuento" name="descuento">
                     </div>
                     <div class="form-group">
-                        <label for="medio_pago">Email:</label>
+                        <label for="medio_pago">Tipo Usuario:</label>
                         <input type="text" id="Email" name="Email">
-                    </div>
-                    <div class="form-group">
-                        <label for="medio_pago">Telegono:</label>
-                        <input type="text" id="Telefono" name="Telefono">
-                    </div>
-            
-                    </div>
-       
+                    </div>            
+                </div>
             </div>
-            
-            
+    
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Cancelar</button>
                 <button type="button" class="btn btn-default">Guardar cambios</button>
             </div>
     </div>
 </div >
-  <!-- Ventana modal2 -->
-<div id="myModal2" class="modal">
-    <div class="modal-content">
-        <span class="close" onclick="closeModal2()">×</span>
-        <div class="modal-header">
-            <h2>Editar Cliente</h2>
-        </div>
-        <div class="modal-body">
-            <div class="caja1">
-                <div class="form-group">
-                    <label for="venta_id">Cliente ID:</label>
-                    <input type="text" id="cliente_id" name="cliente_id">
-                </div>
-                <div class="form-group">
-                    <label for="codigo">Tipo de Identificacion:</label>
-                    <select id="codigo" name="codigo">
-                        <option value="cc">CC</option>
-                        <option value="ce">CE</option>
-                        <option value="nit">NIT</option>
-                        <option value="rc">RC</option>
-                    </select>
-                </div>
-                <div class="form-group">
-                    <label for="descripcion">Identificacion:</label>
-                    <input type="text" id="Identificacion" name="Identificacion">
-                </div>
-                <div class="form-group">
-                    <label for="valor_unitario">Nombre:</label>
-                    <input type="text" id="Nombre" name="Nombre">
-                </div>
-            </div>
-            <div class="caja1">
-                <div class="form-group">
-                    <label for="descuento">Direccion:</label>
-                    <input type="text" id="descuento" name="descuento">
-                </div>
-                <div class="form-group">
-                    <label for="medio_pago">Email:</label>
-                    <input type="text" id="Email" name="Email">
-                </div>
-                <div class="form-group">
-                    <label for="medio_pago">Telegono:</label>
-                    <input type="text" id="Telefono" name="Telefono">
-                </div>
-            </div>
-        </div>
-        <div class="modal-footer">
-            <button type="button" class="btn btn-default" data-dismiss="modal">Cancelar</button>
-            <button type="button" class="btn btn-default">Guardar cambios</button>
-        </div>
-    </div>
-</div>
 
     <script>
         // Función para abrir la ventana modal
@@ -199,3 +139,4 @@
 
 </body>
 </html>
+
