--- a/aplicativo_pos_hc/aplicativo_pos_hc/templates/ventaHistorico.html
+++ b/aplicativo_pos_hc/aplicativo_pos_hc/templates/ventaHistorico.html
@@ -7,10 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha384-NwF3tBdYF4JcJjU4pN3nI9an2P+iK8a/1qdzNm5/lf7dUq0HfdvpBfB5SvOzJ4tv" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/general.css') }}">
     <title>Página con Menú</title>
-    <style>
-        /* Estilos para la ventana modal */
-       
-    </style>
+
 </head>
 <body>
     <div class="wrapper">
@@ -43,7 +40,7 @@
                 <br>
                 <li><a href="{{ url_for('venta_historico') }}"><i class="fas fa-box"></i> ventasHistorico</a></li>
                 <br>
-                <li><a href="{{ url_for('registro') }}"><i class="fas fa-box"></i> Registro</a></li>
+                <li><a href="{{ url_for('registro') }}"><i class="fas fa-box"></i> Usuarios</a></li>
             </ul>
             
            
