Registro de productos OK

--- a/aplicativo_pos_hc/aplicativo_pos_hc/templates/productos.html
+++ b/aplicativo_pos_hc/aplicativo_pos_hc/templates/productos.html
@@ -6,11 +6,8 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha384-NwF3tBdYF4JcJjU4pN3nI9an2P+iK8a/1qdzNm5/lf7dUq0HfdvpBfB5SvOzJ4tv" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/general.css') }}">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <title>Página con Menú</title>
-    <style>
-        /* Estilos para la ventana modal */
-       
-    </style>
 </head>
 <body>
     <div class="wrapper">
@@ -52,66 +49,95 @@
             <i class="fas fa-sign-out-alt"></i> Cerrar sesión
         </a>       
           
-        <div class="content">
+        <div class="content d-flex flex-column" >
             <!-- Contenido principal -->
-            <h3>Productos</h3>
-            <div class="horizontal-bar">
-                <img src="/static/images/devolucion.png" alt="devolucion" class="icon" onclick="openModalDevolucion()">
-                <img src="/static/images/agregar.png" alt="agregar" class="icon" onclick="openModal()">
-                <img src="/static/images/editar.png" alt="Editar" class="icon" onclick="openModal2()">
-                <img src="/static/images/Eliminar.png" alt="Eliminar" class="icon">
-                <input type="text" id="search-input" placeholder="Buscar...">
-            </div>
-        </div>
-
-        <!-- Ventana modal -->
-<div id="myModal" class="modal">
-    <div class="modal-content">
-        <span class="close" onclick="closeModal()">×</span>
-        <div class="modal-header">
-            <h2>Agregar Producto</h2>  
-        </div>
-        <div class="modal-body">
-                <div class="caja1">
-                    <div class="form-group">
-                        <label for="venta_id">Id Producto: </label>
-                        <input type="text" id="cliente_id" name="cliente_id">
-                    </div>
-                    
-                    <div class="form-group">
-                        <label for="descripcion">Codigo: </label>
-                        <input type="text" id="Identificacion" name="Identificacion">
-                    </div>
-                    <div class="form-group">
-                        <label for="valor_unitario">Categoria: </label>
-                        <input type="text" id="Nombre" name="Nombre">
-                    </div>
-                    
+            <h3>Productos</h3>     
+                <div class="horizontal-bar my-4 d-flex py-2 justify-content-end " >
+                    <img src="/static/images/devolucion.png" alt="devolucion" class="icon" onclick="openModalDevolucion()">
+                    <img src="/static/images/agregar.png" alt="agregar" class="icon" onclick="openModal()">
+                    <img src="/static/images/editar.png" alt="Editar" class="icon" onclick="openModal2()">
+                    <img src="/static/images/Eliminar.png" alt="Eliminar" class="icon">
+                    <input type="text" id="search-input" placeholder="Buscar...">
                 </div>
-                <div class="caja1">
-                    <div class="form-group">
-                        <label for="valor_unitario">Proveedor </label>
-                        <input type="text" id="Nombre" name="Nombre">
-                    </div>
-                    <div class="form-group">
-                        <label for="medio_pago">Unidad de medida: </label>
-                        <input type="text" id="Email" name="Email">
-                    </div>
-                    <div class="form-group">
-                        <label for="medio_pago">Valor unitario:</label>
-                        <input type="text" id="Telefono" name="Telefono">
-                    </div>
-            
-                    </div>
-       
-            </div>
+                
+                    <table class="table table-bordered">
+                        <thead>
+                            <th scope="col">Id_Producto</th> 
+                            <th scope="col">Codigo</th> 
+                            <th scope="col">Categoria</th> 
+                            <th scope="col">Proveedor</th> 
+                            <th scope="col">Unidad_medida</th> 
+                            <th scope="col">Valor_unitario</th> 
+                        </thead>
+                    
+                    <tbody >
+                        {% for d in data %}
+                            <tr>
+                                <td>{{d.id_producto}}</td>
+                                <td>{{d.codigo}}</td>
+                                <td>{{d.categoria}}</td>
+                                <td>{{d.proveedor}}</td>
+                                <td>{{d.unidad_medida}}</td>
+                                <td>{{d.valor_unitario}}</td>
+                                <td><button class="btn btn-primary btn-sm">Editar</td>
+                                <td><button class="btn btn-danger btn-sm">Eliminar</td>
+                            </tr>
+                        {% endfor %}
+                    </tbody>
+                    </table>
+                
+        </div>
 
-            <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Cancelar</button>
-                <button type="button" class="btn btn-default">Guardar cambios</button>
+        <!-- Ventana modal agregar productos -->
+        <div id="myModal" class="modal">
+            <div class="modal-content">
+                <span class="close" onclick="closeModal()">×</span>
+                <form action="/guardar" id="product_form" method="post" >
+                    <div class="modal-header">
+                        <h2>Agregar Producto</h2>  
+                    </div>
+                    <div class="modal-body">
+                        <div class="caja1">
+                            <div class="form-group">
+                                    <label for="venta_id">Id Producto: </label>
+                                <input type="text" id="cliente_id" name="id_producto">
+                            </div>
+                            
+                            <div class="form-group">
+                                <label for="descripcion">Codigo: </label>
+                                <input type="text" id="codigo" name="codigo">
+                            </div>
+                            <div class="form-group">
+                                <label for="valor_unitario">Categoria: </label>
+                                <input type="text" id="categoria" name="categoria">
+                            </div>
+                            
+                        </div>
+                        <div class="caja1">
+                            <div class="form-group">
+                                <label for="valor_unitario">Proveedor </label>
+                                <input type="text" id="proveedor" name="proveedor">
+                            </div>
+                            <div class="form-group">
+                                <label for="medio_pago">Valor unitario:</label>
+                                <input type="text" id="valorUnitario" name="valor_unitario">
+                            </div>
+                            <div class="form-group">
+                                <label for="medio_pago">Unidad de medida: </label>
+                                <input type="text" id="unidadMedida" name="unidad_medida">
+                            </div>
+                    
+                        </div>
+                    </div>
+        
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" onclick="closeModal()">Cancelar</button>
+                        <button type="submit" class="btn btn-default">Guardar cambios</button>
+                    </div>
+                </form>
             </div>
-    </div>
-</div >
+        </div>
+        
   <!-- Ventana modal Editar -->
 <div id="myModal2" class="modal">
     <div class="modal-content">
@@ -210,6 +236,8 @@
         </div>
     </div>
 </div>
+
+
     <script>
         // Función para abrir la ventana modal
         function openModal() {
