Impl_Editar_Producto_avance

--- a/aplicativo_pos_hc/aplicativo_pos_hc/templates/productos.html
+++ b/aplicativo_pos_hc/aplicativo_pos_hc/templates/productos.html
@@ -1,3 +1,4 @@
+<!-- productos.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -82,8 +83,8 @@
                                 <td>{{d.proveedor}}</td>
                                 <td>{{d.unidad_medida}}</td>
                                 <td>{{d.valor_unitario}}</td>
-                                <td><button class="btn btn-primary btn-sm" id="btn-edit{{d.id_producto}}" data-bs-toggle="modal" data-bs-target="#modal{{d.id_producto}}">Editar</button></td>  
-                                <td><a href="{{url_for('delete', id_producto=d.id_producto)}}" class="btn btn-danger btn-sm">Eliminar</a></td>
+                                <td><a href="{{ url_for('editar_producto', id_producto=d.id_producto) }}" class="btn btn-primary btn-sm">Editar</a></td>  
+                                <td><a href="#" class="btn btn-danger btn-sm">Eliminar</a></td>
                             </tr>
                         {% endfor %}
                     </tbody>
@@ -144,51 +145,6 @@
             </div>
         </div>
         
-  <!-- Ventana modal Editar -->
-<div id="myModal2" class="modal">
-    <div class="modal-content">
-        <span class="close" onclick="closeModal2()">×</span>
-        <div class="modal-header">
-            <h2>Editar Producto</h2>
-        </div>
-        <div class="modal-body">
-            <div class="caja1">
-                <div class="form-group">
-                    <label for="venta_id">Id Producto: </label>
-                    <input type="text" id="cliente_id" name="cliente_id">
-                </div>
-                
-                <div class="form-group">
-                    <label for="descripcion">Codigo: </label>
-                    <input type="text" id="Identificacion" name="Identificacion">
-                </div>
-                <div class="form-group">
-                    <label for="valor_unitario">Categoria: </label>
-                    <input type="text" id="Nombre" name="Nombre">
-                </div>
-                
-            </div>
-            <div class="caja1">
-                <div class="form-group">
-                    <label for="valor_unitario">Proveedor </label>
-                    <input type="text" id="Nombre" name="Nombre">
-                </div>
-                <div class="form-group">
-                    <label for="medio_pago">Unidad de medida: </label>
-                    <input type="text" id="Email" name="Email">
-                </div>
-                <div class="form-group">
-                    <label for="medio_pago">Valor unitario:</label>
-                    <input type="text" id="Telefono" name="Telefono">
-                </div>
-            </div>
-        </div>
-        <div class="modal-footer">
-            <button type="button" class="btn btn-default" data-dismiss="modal">Cancelar</button>
-            <button type="button" class="btn btn-default">Guardar cambios</button>
-        </div>
-    </div>
-</div>
  <!-- Ventana modal Devoluciones -->
  <div id="myModal3" class="modal">
     <div class="modal-content">
