Registro_Caja_ok

--- a/aplicativo_pos_hc/aplicativo_pos_hc/templates/productos.html
+++ b/aplicativo_pos_hc/aplicativo_pos_hc/templates/productos.html
@@ -50,7 +50,7 @@
             <i class="fas fa-sign-out-alt"></i> Cerrar sesión
         </a>       
           
-        <div class="content d-flex flex-column" >
+        <div class="content d-flex flex-column " >
             <!-- Contenido principal -->
             <h3>Productos</h3>     
                 <div class="horizontal-bar my-4 d-flex py-2 justify-content-end " >
@@ -103,11 +103,11 @@
                     <div class="modal-body">
                         <div class="caja1">
                             <div class="form-group">
-                                    <label for="venta_id">Id Producto: </label>
-                                <input type="text" id="cliente_id" name="id_producto">
+                                    <label for="id_producto">Id Producto: </label>
+                                <input type="text" id="id_producto" name="id_producto">
                             </div>
                             <div class="form-group">
-                                <label for="descripcion">Codigo: </label>
+                                <label for="codigo">Codigo: </label>
                                 <input type="text" id="codigo" name="codigo">
                             </div>
                             <div class="form-group">
