--- a/aplicativo_pos_hc/aplicativo_pos_hc/templates/caja.html
+++ b/aplicativo_pos_hc/aplicativo_pos_hc/templates/caja.html
@@ -1,3 +1,4 @@
+<!-- productos.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,8 +7,8 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha384-NwF3tBdYF4JcJjU4pN3nI9an2P+iK8a/1qdzNm5/lf7dUq0HfdvpBfB5SvOzJ4tv" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/general.css') }}">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <title>Página con Menú</title>
-
 </head>
 <body>
     <div class="wrapper">
@@ -26,7 +27,7 @@
                 </div>
             </div>
             <ul>
-                <li><a href="{{ url_for('principal') }}"><i class="fas fa-home"><br></i> Inicio</a></li>
+                <li><a href="{{ url_for('principal') }}"><i class="fas fa-home"></i> Inicio</a></li>
                 <br>
                 <li><a href="{{ url_for('caja') }}"><i class="fas fa-cash-register"></i> Caja</a></li>
                 <br>
@@ -40,38 +41,78 @@
                 <br>
                 <li><a href="{{ url_for('venta_historico') }}"><i class="fas fa-box"></i> ventasHistorico</a></li>
                 <br>
-                <li><a href="{{ url_for('registro') }}"><i class="fas fa-box"></i> Usuarios</a></li>
+                <li><a href="{{ url_for('registro') }}"><i class="fas fa-box"></i> registro</a></li>
             </ul>
             
            
         </div>
         <a href="{{ url_for('logout') }}" class="logout-link">
             <i class="fas fa-sign-out-alt"></i> Cerrar sesión
-        </a>
-
-        <div class="content">
+        </a>       
+          
+        <div class="content d-flex flex-column " >
             <!-- Contenido principal -->
-            <h3>Registro de caja</h3>
-            <div class="horizontal-bar">
-                <img src="/static/images/agregar.png" alt="agregar" class="icon" onclick="openModal()">
-                <img src="/static/images/Eliminar.png" alt="Eliminar" class="icon">
-                <button type="button" class="lector">Lectura codigo de barras</button>
-            </div>
+            <h3>Registro de Caja</h3>     
+                <div class="horizontal-bar my-4 d-flex py-2 justify-content-end " >
+                    <img src="/static/images/devolucion.png" alt="devolucion" class="icon" onclick="openModalDevolucion()">
+                    <img src="/static/images/agregar.png" alt="agregar" class="icon" onclick="openModal()">
+                    <img src="/static/images/editar.png" alt="Editar" class="icon" onclick="openModal2()">
+                    <img src="/static/images/Eliminar.png" alt="Eliminar" class="icon">
+                    <button type="button" class="lector">Lectura codigo de barras</button>
+                    <input type="text" id="search-input" placeholder="Buscar...">
+                </div>
+                
+                    <table class="table table-bordered">
+                        <thead>
+                            <th scope="col">Id_venta</th> 
+                            <th scope="col">Codigo</th>
+                            <th scope="col">Descripcion</th> 
+                            <th scope="col">Valor_Unitario</th> 
+                            <th scope="col">Medio_Pago</th> 
+                            <th scope="col">Descuento</th> 
+                            <th scope="col">Id_Cliente</th>
+                            <th scope="col">Cantidad</th>
+                            <th scope="col">Iva</th>
+                            <th scope="col">Total_a_pagar</th>
+                            <th scope="col">Fecha_Registro</th>
+                            <th scope="col">Observaciones</th>
+                            <th scope="col" colspan="2">Acciones</th> 
+                        </thead>
+                    
+                    <tbody >
+                        {% for d in data %}
+                            <tr>
+                                <td>{{d.id_venta}}</td>
+                                <td>{{d.codigo}}</td>
+                                <td>{{d.descripcion}}</td>
+                                <td>{{d.valor_unitario}}</td>
+                                <td>{{d.medio_pago}}</td>
+                                <td>{{d.descuento}}</td>
+                                <td>{{d.id_cliente}}</td>
+                                <td>{{d.cantidad}}</td>
+                                <td>{{d.iva}}</td>
+                                <td>{{d.total_a_pagar}}</td>
+                                <td>{{d.fecha_registro}}</td>
+                                <td>{{d.observaciones}}</td>
+                            </tr>
+                        {% endfor %}
+                    </tbody>
+                    </table>
         </div>
 
-        <!-- Ventana modal -->
-<div id="myModal" class="modal">
-    <div class="modal-content">
-        <span class="close" onclick="closeModal()">×</span>
-        <div class="modal-header">
+        <!-- Ventana modal agregar venta -->
+        <div id="myModal" class="modal">
+            <div class="modal-content">
+                <span class="close" onclick="closeModal()">×</span>
+                <form action="/guardarVenta" id="venta_form" method="post" >
+                    <div class="modal-header">
             <h2>Registro de venta</h2>
-           
         </div>
         <div class="modal-body">
                 <div class="caja1">
                     <div class="form-group">
-                        <label for="venta_id">Venta ID:</label>
-                        <input type="text" id="venta_id" name="venta_id">
+                        <label for="id_venta">Id_venta</label>
+                        <input type="text" id="id_venta" name="id_venta">
                     </div>
                     <div class="form-group">
                         <label for="codigo">Código:</label>
@@ -89,15 +130,15 @@
                         <label for="medio_pago">Medio de Pago:</label>
                         <input type="text" id="medio_pago" name="medio_pago">
                     </div>
-                </div>
-                <div class="caja1">
                     <div class="form-group">
                         <label for="descuento">Descuento:</label>
                         <input type="text" id="descuento" name="descuento">
                     </div>
+                </div>
+                <div class="caja1">
                     <div class="form-group">
-                        <label for="fecha_venta">Fecha de Venta:</label>
-                        <input type="text" id="fecha_venta" name="fecha_venta">
+                        <label for="id_cliente">Id Cliente:</label>
+                        <input type="text" id="id_cliente" name="id_cliente">
                     </div>
                     <div class="form-group">
                         <label for="cantidad">Cantidad:</label>
@@ -107,12 +148,24 @@
                         <label for="iva">IVA:</label>
                         <input type="text" id="iva" name="iva">
                     </div>
+                    <div class="form-group">
+                        <label for="total_a_pagar">Total_a_Pagar:</label>
+                        <input type="text" id="total_a_pagar" name="total_a_pagar">
+                    </div>
+                    <div class="form-group">
+                        <label for="fecha_registro">Fecha de registro:</label>
+                        <input type="date" id="fecha_registro" name="fecha_registro">
+                    </div>
+                    <div class="form-group">
+                        <label for="observaciones">Observaciones:</label>
+                        <input type="text" id="observaciones" name="observaciones">
+                    </div>
                 </div>
        
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Cancelar</button>
-                <button type="button" class="btn btn-default">Guardar cambios</button>
+                <button type="button" class="btn btn-default" onclick="closeModal()">Cancelar</button>
+                <button type="submit" class="btn btn-default">Guardar cambios</button>
             </div>
     </div>
 </div>
